name:                helpbot
version:             0.1.0.0
synopsis:            A bot to assist with helping users in IRC help channels by automating CTCP requests.
description:         Please see README.md
homepage:            https://github.com/snoonetIRC/helpbot#readme
license:             AGPL-3
license-file:        LICENSE
author:              Drew Mason-Laurence
maintainer:          drew@zowlyfon.net
copyright:           Drew Mason-Laurence
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     config.json
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , bytestring
                     , network
  default-language:    Haskell2010

executable helpbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helpbot
  default-language:    Haskell2010

test-suite helpbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , helpbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoonetIRC/helpbot
